<resources>
    <string name="app_name">agenda</string>
    <string name="add_contact">Adicionar Contato</string>
    <string name="name">Nome</string>
    <string name="phone">Telefone</string>
    <string name="age">Idade</string>
    <string name="surname">Sobrenome</string>
    <string name="empty">EMPTY</string>
    <string name="edit">Editar</string>
    <string name="delete">Excluir</string>
    <string name="contact_fragment">Informações do Contato</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_contact_list">ContactListActivity</string>
    <string name="tab_text_1">Contact List</string>
    <string name="tab_text_2">About me</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="about_us1">About me</string>
    <string name="developer">Developed by Marlena Mota Martins</string>
    <string name="phone_developer">Phone: (71) 99154-5496</string>
    <string name="linkedin_developer">Linkedin: www.linkedin.com/marlenamartins</string>
    <string name="weather">Weather Now</string>

</resources>
