<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us1"
            android:gravity="center_horizontal"
            android:textSize="45dp"
            android:textStyle="bold"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/developer"
            android:gravity="center"
            android:textSize="17dp"
            android:textStyle="bold"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/phone_developer"
            android:gravity="center"
            android:textSize="17dp"
            android:textStyle="bold"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/linkedin_developer"
            android:gravity="center"
            android:textSize="17dp"
            android:textStyle="bold"/>



</LinearLayout>