<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ll_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="25dp"
        android:orientation="vertical"
        tools:context=".view.activities.AddContactActivity">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="#6dffbf"
                android:textStyle="bold"
                android:padding="30dp"
                android:text="@string/add_contact"/>

        <EditText
                android:id="@+id/name_contactEDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="#6bfff7"
                android:textColorHint="#52afaa"
                android:textAlignment="center"/>

        <EditText
                android:id="@+id/phone_contactEDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textColor="#6bfff7"
                android:textColorHint="#52afaa"
                android:textAlignment="center"/>

        <Button
                android:id="@+id/add_contactBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_contact"
                android:layout_marginTop="25dp"
                android:textAllCaps="false" />

</LinearLayout>
